# HotelSystems

./: .gitignore  ARCHITECTURE.md  DEPLOYMENT_SETUP.md  DEPLOYMENT_URLS.md  IMPLEMENTATION_PLAN.md  ON_SERVER_STACK.md  README.md  REFERENCE.md  SETUP_AND_DEPLOYMENT_GUIDE.md  SFMS-MVP.md  SFMS_AI_Native_MVP_Plan.md  SKILLS.md  render.yaml
.config/: .env.example  config.dev.toml  config.prod.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  e2e.yml  pr-checks.yml
backend/: Dockerfile  fly.toml  pyproject.toml
backend/alembic/: README  env.py
backend/alembic/versions/: 001_baseline_schema.py  002_add_equipment_table.py  003_add_payment_indexes.py  004_feature_completion.py
backend/scripts/: hash_password.py
backend/src/hotel_ms/: __init__.py  config.py  dependencies.py  main.py
backend/src/hotel_ms/models/: __init__.py  database.py  schemas.py
backend/src/hotel_ms/routers/: auth.py  health.py  hotels.py  restaurants.py
backend/src/sfms/: __init__.py  config.py  dependencies.py  main.py  rate_limit.py
backend/src/sfms/middleware/: tenant.py
backend/src/sfms/models/: database.py  schemas.py
backend/src/sfms/routers/: auth.py  bookings.py  courts.py  dashboard.py  equipment.py  facilities.py  health.py  payments.py  tournaments.py  users.py
backend/src/sfms/services/: booking_engine.py  exceptions.py  payment_service.py  slot_generator.py  tournament_service.py
backend/src/sfms/utils/: logger.py
backend/tests/: conftest.py  test_auth.py  test_bookings.py  test_courts.py  test_dashboard.py  test_facilities.py  test_health.py  test_payments.py  test_users.py
db/: add_booking_source.sql  apply_schema.py  init.sql  reseed_users.py  seed.sql
docker/: .env.server.example  SERVER_STEPS.md  docker-compose.yml
frontend/: .env.example  .gitignore  Dockerfile  next.config.ts  package-lock.json  package.json  playwright.config.ts  sentry.server.config.ts  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/__tests__/: api.test.ts  auth-context.test.tsx  auth.test.ts  hooks.test.ts  landing.test.tsx  login.test.tsx
frontend/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  page.tsx
frontend/e2e/: booking-flow.spec.ts  booking-source.spec.ts  bookings-mgmt.spec.ts  branches.spec.ts  courts.spec.ts  dashboard-overview.spec.ts  dues.spec.ts  equipment.spec.ts  error-states.spec.ts  landing.spec.ts  legal-pages.spec.ts  peak-pricing.spec.ts  pricing-rules.spec.ts  rate-limit.spec.ts  registration-success.spec.ts  registration.spec.ts  revenue-collections.spec.ts  revenue.spec.ts  schedule.spec.ts  settings.spec.ts  sidebar.spec.ts  slot-blocking.spec.ts  team.spec.ts  tournaments.spec.ts  (+1 more)
scripts/: sync-to-server.ps1  sync-to-server.sh
tests/: smoke_test_prod.py
(+55 files in other folders)
