[project]
name = "hotel_ms"
version = "0.1.0"
description = "Hotel Management System - Backend API"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "HotelSystems"}]

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic[email]>=2.9",
    "pydantic-settings>=2.5",
    "asyncpg>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "bcrypt>=4.0,<4.1",
    "python-multipart>=0.0.9",
]

[dependency-groups]
test = ["pytest>=8.0", "pytest-asyncio>=0.24", "httpx"]
dev = ["ruff>=0.8", "mypy>=1.13"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["hotel_ms"]
